fixati bug dei combobox